@@ -1,40 +1,49 @@
 package com.smart.logistic.controller;
 
-import com.smart.logistic.dto.AcceptOrderRequest;
 import com.smart.logistic.dto.CreateOrderRequest;
 import com.smart.logistic.dto.OrderResponse;
 import com.smart.logistic.entity.DriverProfile;
 import com.smart.logistic.entity.Order;
-import com.smart.logistic.entity.User;
+import com.smart.logistic.entity.OrderStatus;
 import com.smart.logistic.mapper.DriverMapper;
 import com.smart.logistic.mapper.OrderMapper;
 import com.smart.logistic.repository.WalletRepository;
 import com.smart.logistic.service.OrderService;
-import com.smart.logistic.service.UserService;
+import com.smart.logistic.utils.AuthUtil;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/orders")
 public class OrderController {
 
     private final OrderService orderService;
-    private final UserService userService;
-    private final WalletRepository walletRepository;
     private final OrderMapper orderMapper;
     private final DriverMapper driverMapper;
+    private final AuthUtil authUtil;
 
-    public OrderController(OrderService orderService, UserService userService, WalletRepository walletRepository, OrderMapper orderMapper, DriverMapper driverMapper) {
+    public OrderController(OrderService orderService, WalletRepository walletRepository, OrderMapper orderMapper, DriverMapper driverMapper, AuthUtil authUtil) {
         this.orderService = orderService;
-        this.userService = userService;
-        this.walletRepository = walletRepository;
         this.orderMapper = orderMapper;
         this.driverMapper = driverMapper;
+        this.authUtil = authUtil;
     }
 
+    @PreAuthorize("hasAnyRole('CUSTOMER', 'DRIVER')")
+    @GetMapping("/{orderId}")
+    public ResponseEntity<?> getOrderDetails(@PathVariable UUID orderId) {
+        try {
+            OrderResponse response = orderService.getOrderDetailsWithDriverLocation(orderId);
+            return ResponseEntity.ok(response);
+        } catch (Exception e) {
+            return ResponseEntity.badRequest().body(e.getMessage());
+        }
+    }
+
+    @PreAuthorize("hasRole('CUSTOMER')")
     @PostMapping("/create")
     public ResponseEntity<?> createOrder(@RequestBody CreateOrderRequest request) {
         try {
@@ -45,134 +54,149 @@ public class OrderController {
         }
     }
 
-    @PostMapping("/accept")
-    public ResponseEntity<?> acceptOrder(@RequestBody AcceptOrderRequest request) {
+    @PreAuthorize("hasRole('DRIVER')")
+    @PutMapping("/accept")
+    public ResponseEntity<?> acceptOrder(@RequestBody Map<String, String> request) {
         try {
-            Order order = orderService.acceptOrder(request);
+            UUID orderId = UUID.fromString(request.get("orderId"));
+
+            Order order = orderService.acceptOrder(orderId);
+
             return ResponseEntity.ok(orderMapper.toResponse(order));
+
         } catch (Exception e) {
             return ResponseEntity.badRequest().body(e.getMessage());
         }
     }
 
+    @PreAuthorize("hasRole('DRIVER')")
     @GetMapping("/pending")
     public ResponseEntity<?> getPendingOrders() {
         try {
-            List<Order> pendingOrders = orderService.getOrdersByStatus("PENDING");
+            List<Order> pendingOrders = orderService.getOrdersByStatus(OrderStatus.PENDING);
 
-            List<OrderResponse> result = pendingOrders.stream().map(orderMapper::toResponse).collect(Collectors.toList());
+            List<OrderResponse> result = pendingOrders.stream().map(orderMapper::toResponse).toList();
 
             return ResponseEntity.ok(result);
+
         } catch (Exception e) {
             return ResponseEntity.badRequest().body(e.getMessage());
         }
     }
 
-    @GetMapping("/driver/{driverId}/active")
-    public ResponseEntity<?> getDriverActiveOrders(@PathVariable UUID driverId) {
-        try {
-            List<Order> activeOrders = orderService.getOrdersByDriverAndStatus(driverId, "ACCEPTED");
+    @PreAuthorize("hasRole('DRIVER')")
+    @PutMapping("/start-delivery")
+    public ResponseEntity<?> startDelivery(@RequestBody Map<String, String> request) {
 
-            List<OrderResponse> result = activeOrders.stream().map(orderMapper::toResponse).collect(Collectors.toList());
-
-            return ResponseEntity.ok(result);
-        } catch (Exception e) {
-            return ResponseEntity.badRequest().body(e.getMessage());
-        }
-    }
-
-    @PostMapping("/complete")
-    public ResponseEntity<?> completeOrder(@RequestBody Map<String, String> request) {
         try {
             UUID orderId = UUID.fromString(request.get("orderId"));
+
+            orderService.startDelivery(orderId);
+
+            return ResponseEntity.ok("Đơn hàng đang được giao");
+
+        } catch (Exception e) {
+            return ResponseEntity.badRequest().body(e.getMessage());
+        }
+    }
+
+    @PreAuthorize("hasRole('DRIVER')")
+    @GetMapping("/driver/active")
+    public ResponseEntity<?> getDriverActiveOrders() {
+
+        List<Order> activeOrders = orderService.getActiveOrdersForDriver(authUtil.getCurrentUserId());
+
+        return ResponseEntity.ok(activeOrders.stream().map(orderMapper::toResponse).toList());
+    }
+
+    @PreAuthorize("hasRole('DRIVER')")
+    @PutMapping("/complete")
+    public ResponseEntity<?> completeOrder(@RequestBody Map<String, String> request) {
+
+        try {
+            UUID orderId = UUID.fromString(request.get("orderId"));
+
             orderService.completeOrder(orderId);
 
-            Map<String, Object> response = new HashMap<>();
-            response.put("status", "success");
-            response.put("message", "🏁 Đơn hàng đã được hoàn thành thành công!");
-            response.put("orderId", orderId);
+            return ResponseEntity.ok(Map.of("status", "success", "message", "🏁 Đơn hàng đã được hoàn thành thành công!", "orderId", orderId));
 
-            return ResponseEntity.ok(response);
         } catch (Exception e) {
             return ResponseEntity.badRequest().body(e.getMessage());
         }
     }
 
-    @GetMapping("/driver/{driverId}/history")
-    public ResponseEntity<?> getDriverHistory(@PathVariable UUID driverId) {
+    @PreAuthorize("hasRole('DRIVER')")
+    @GetMapping("/driver/history")
+    public ResponseEntity<?> getDriverHistory() {
+
+        List<Order> history = orderService.getOrdersByDriverAndStatus(authUtil.getCurrentUserId(), OrderStatus.COMPLETED);
+
+        return ResponseEntity.ok(history.stream().map(orderMapper::toDriverHistoryMap).toList());
+    }
+
+    @PreAuthorize("hasRole('CUSTOMER')")
+    @GetMapping("/customer/history")
+    public ResponseEntity<?> getCustomerHistory() {
+
         try {
-            List<Order> historyOrders = orderService.getOrdersByDriverAndStatus(driverId, "COMPLETED");
-            List<Map<String, Object>> result = historyOrders.stream()
-                    .map(orderMapper::toDriverHistoryMap)
-                    .collect(Collectors.toList());
+            List<Order> orders = orderService.getOrdersByCustomer(authUtil.getCurrentUserId());
+
+            List<Map<String, Object>> result = orders.stream().map(orderMapper::toCustomerHistoryMap).toList();
+
             return ResponseEntity.ok(result);
+
         } catch (Exception e) {
             return ResponseEntity.badRequest().body(e.getMessage());
         }
     }
 
-    @GetMapping("/driver/{driverId}/wallet")
-    public ResponseEntity<?> getDriverWallet(@PathVariable UUID driverId) {
-        try {
-            User driver = userService.findById(driverId);
-            com.smart.logistic.entity.Wallet wallet = walletRepository.findByUser(driver).orElseThrow(() -> new RuntimeException("Tài xế chưa được kích hoạt ví tiền hệ thống!"));
-
-            Map<String, Object> response = new HashMap<>();
-            response.put("balance", wallet.getBalance());
-
-            return ResponseEntity.ok(response);
-        } catch (Exception e) {
-            return ResponseEntity.badRequest().body("Lỗi lấy số dư ví: " + e.getMessage());
-        }
-    }
-
-    @GetMapping("/customer/{customerId}/history")
-    public ResponseEntity<?> getCustomerHistory(@PathVariable UUID customerId) {
-        try {
-            List<Order> orders = orderService.getOrdersByCustomer(customerId);
-            List<Map<String, Object>> result = orders.stream()
-                    .map(orderMapper::toCustomerHistoryMap)
-                    .collect(Collectors.toList());
-            return ResponseEntity.ok(result);
-        } catch (Exception e) {
-            return ResponseEntity.badRequest().body(e.getMessage());
-        }
-    }
-
-    @PostMapping("/customer-cancel")
+    @PreAuthorize("hasRole('CUSTOMER')")
+    @PutMapping("/customer-cancel")
     public ResponseEntity<?> customerCancelOrder(@RequestBody Map<String, String> request) {
+
         try {
             UUID orderId = UUID.fromString(request.get("orderId"));
+
             String reason = request.getOrDefault("reason", "Khách hàng chủ động hủy khi chưa có xe nhận");
 
             Order cancelledOrder = orderService.customerCancelOrder(orderId, reason);
+
             return ResponseEntity.ok("Hủy đơn thành công! Trạng thái hiện tại: " + cancelledOrder.getStatus());
+
         } catch (Exception e) {
             return ResponseEntity.badRequest().body(e.getMessage());
         }
     }
 
-    @PostMapping("/driver-cancel")
+    @PreAuthorize("hasRole('DRIVER')")
+    @PutMapping("/driver-cancel")
     public ResponseEntity<?> driverCancelOrder(@RequestBody Map<String, String> request) {
+
         try {
             UUID orderId = UUID.fromString(request.get("orderId"));
+
             String reason = request.getOrDefault("reason", "Tài xế báo hủy cuốc vì sự cố dọc đường");
 
             Order releasedOrder = orderService.driverCancelOrder(orderId, reason);
+
             return ResponseEntity.ok("Tài xế hủy cuốc thành công! Trạng thái: " + releasedOrder.getStatus());
+
         } catch (Exception e) {
             return ResponseEntity.badRequest().body(e.getMessage());
         }
     }
 
+    @PreAuthorize("hasRole('CUSTOMER')")
     @GetMapping("/{orderId}/nearby-drivers")
     public ResponseEntity<?> getNearbyDrivers(@PathVariable UUID orderId) {
+
         try {
             List<DriverProfile> drivers = orderService.findDriversForOrder(orderId);
-            List<Map<String, Object>> result = drivers.stream()
-                    .map(driverMapper::toNearbyDriverMap)
-                    .collect(Collectors.toList());
+
+            List<Map<String, Object>> result = drivers.stream().map(driverMapper::toNearbyDriverMap).toList();
+
             return ResponseEntity.ok(result);
+
         } catch (Exception e) {
             return ResponseEntity.badRequest().body(e.getMessage());
         }
